public/assets/css/style.css
/* ... */
.checkout .form-check-input {
  width: 20px;
  height: 20px;
}

.checkout .form-check-input:checked {
  background-color: var(--gray-500) !important;
  border-color: transparent !important;
}

.checkout .paymentSelect .form-check-label {
  border-radius: 6px;
  padding: 15px 12px;
  cursor: pointer;
}

/* .checkout .paymentSelect .form-check-input:checked {
  background-color: white !important;
} */

.checkout .paymentSelect .form-check-input:checked~.form-check-label {
  background-color: var(--gray-500);
  border-color: transparent !important;
}
.checkout .paymentSelect .form-check-input:checked~.form-check-label span{
  color: var(--slate-50);
}
.checkout .paymentSelect .form-check-input:checked~.form-check-label svg path{
  stroke: white;
}
.checkout .form-check-input{
  border-color: var(--slate-900);
}
.paymentMethod .form-check-input:checked[type=radio] {
  background-image: url("../images/radio-bg.svg");
}
.checkout .form-check-input[type="checkbox"]:checked {
  background-color: var(--blue-500) !important;
}

.checkout .paymentSelect .form-check-input {
  margin-right: 12px;
  top: 14px;
}

.page-section {
  scroll-margin-top: 100px;
}

.product-detail .slick-slide {
  height: auto !important;
}

.product-detail .slider-nav .slick-list {
  width: 90%;
  float: left;
}

.product-detail .custom-prev-arrow,
.product-detail .custom-next-arrow {
  width: 5%;
  float: left;
  height: 100px;
  align-content: center;
  text-align: left;
}

.product-detail .custom-next-arrow {
  text-align: right;
}

#addOrder .iti.iti--allow-dropdown {
  width: 100%;
}

#addOrder .error,
#contactUs .error {
  color: red;
  font-size: 14px;
}

.modal .btn-close {
  position: absolute;
  top: -20px;
  right: -20px;
  background-color: #fff;
  border: 1px solid #ccc;
  border-radius: 50%;
  width: 25px;
  height: 25px;
  display: flex;
  justify-content: center;
  align-items: center;
  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
  z-index: 1051;
}

.modal .btn-close:hover {
  background-color: #f8f9fa;
}

.linear-banner {
  height: 280px;
}

.sz_alert {
  position: fixed;
  top: 90px;
  right: 0px;
  border: 0;
  box-shadow: 0px 0px 32px 0px #5555553D;
  text-align: center;
  z-index: 99;
  padding: 1rem 4rem;
  animation-duration: 0.3s;
  animation-fill-mode: forwards;
}

.sz_alert.alert-success {
  background: #ECFFEC;
}

.sz_alert.alert-danger {
  background: #f8d7da;
}

.sz_alert_success,
.sz_alert_danger {
  display: none;
}

.sz_cart_btn {
  position: relative;
}

.sz_cart-badge {
  position: absolute;
  top: -2px;
  right: -7px;
  font-size: 10px;
  background-color: var(--pumpkin-orange-500);
  color: white;
  border-radius: 50%;
  font-weight: 700;
  min-width: 17px;
  padding: 1px 0;
  text-align: center;
}

.sz_cart-badge.sz_badge_white {
  background-color: #FFFFFF;
  color: var(--slate-900);
}

.fade-in-right {
  animation-name: fadeInRight;
}

.fade-out-left {
  animation-name: fadeOutLeft;
}

@keyframes fadeInRight {
  0% {
    opacity: 0;
    transform: translateX(100%);
  }

  100% {
    opacity: 1;
    transform: translateX(0);
  }
}

@keyframes fadeOutLeft {
  0% {
    opacity: 1;
    transform: translateX(0%);
  }

  100% {
    opacity: 0;
    transform: translateX(100%);
  }
}

.banner-overlay {
  background: #00000066;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}

.fixed-add-to-cart {
  padding: 10px 50px;
  box-shadow: 0 0 20px 0px #ccc;
  position: fixed;
  bottom: 0;
  left: 0;
  right: 0;
  z-index: 2;
  background: white;
  visibility: hidden;
  transition: all .3s ease;
  transform: translateY(100%);
}

.fixed-add-to-cart.active {
  visibility: visible;
  transform: translateY(0);
}

.fixed-add-to-cart .img-pro {
  width: 70px;
  flex-shrink: 0;
  overflow: hidden;
}

.ws_sec {
  right: 10px;
  top: 10px;
}

.warrantyLabel {
  background-color: var(--slate-900);
  padding: 0 12px;
}

.cardCheckout .likeProuct .button-dark {
  font-size: 16px;
  padding: 12px 16px;
  white-space: nowrap;
}

.top-navigation {
  z-index: 4;
}

.top-navigation .owl-carousel .animated {
  animation-duration: .3s;
}

.contact-card {
  background-color: #FBFBFB;
  padding: 40px;
  border-radius: 30px;
}

.contact-card .iti {
  width: 100%;
}

.contact-card .iti--separate-dial-code .iti__selected-flag {
  background-color: transparent !important;
}

.contact-card .iti--separate-dial-code.iti--show-flags .iti__selected-dial-code {
  order: 1;
}

.contact-card .iti__arrow {
  border: 0 !important;
  background-image: url('../images/chevron-down.svg');
  width: 20px;
  height: 20px;
  background-position: center;
  background-repeat: no-repeat;
}

.product-card {
  padding: 50px;
}


.card-information .textInput{
  padding: 10px 16px;
  font-size: 14px;
}

.logo-placeholder{
  margin-top: -150px;
}

.stickyProductImage{
  position: sticky;
  top: 130px;
}

.our-partner{
  padding: 80px 0;
}
.our-partner .owl-stage{
  display: flex;
  margin-bottom: 30px;
}
.our-partner .owl-dots button{
  background-color: #E6E9F4;
  min-width: 50px;
  height: 5px;
}
.our-partner .owl-dots{
  display: flex;
  align-items: center;
  column-gap: 10px;
  justify-content: center;
}
.our-partner .owl-dots button.active{
  background-color: var(--neutrino-blue-400);
  height: 10px;
}

.hot-deals{
  padding-top: 100px;
  padding-bottom: 52px;
}
.hot-deals h2 {
  font-size: 56px;
  line-height: 66px;
}
.hot-deals .cards{
  border-color: #E6E9F4;
  box-shadow: 0px 3px 6px 0px rgba(0, 0, 0, 0.08);
  border-radius: 8px;
}
.hot-deals .hot-d-label{
  padding: 12px 24px 12px 16px;
  letter-spacing: -0.3px;
  border-radius: 10px 11px 100px 2px;
  top: -8px;
  left: -8px;
}
.hot-deals .hot-d-label svg{
  bottom: 2px;
}
.hot-deals .hot-col{
  padding: 0 40px;
}
.hot-deals .hot-row{
  margin: 56px -40px 0;
}

.lead-form-modal .modal-dialog{
  max-width: 610px;
}
/* ... */

